Flyttet funktionalitet til FirestoreClient og Repository

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -88,4 +88,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statisticsBtn" />
 
+    <Button
+        android:id="@+id/wagerViewBnt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wagerViewBnt"
+        app:layout_constraintEnd_toEndOf="@+id/LogOutBtn2"
+        app:layout_constraintStart_toStartOf="@+id/LogOutBtn2"
+        app:layout_constraintTop_toBottomOf="@+id/addBtn" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/testrcv"
+        android:layout_width="0dp"
+        android:layout_height="11dp"
+        tools:layout_editor_absoluteX="469dp"
+        tools:layout_editor_absoluteY="25dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
