--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.ResultsActivity">
+    tools:context=".Activities.ResultsActivity"
+    android:background="@color/BackgroundC">
 
     <TextView
         android:id="@+id/resultsTitleTV"
