--- a/app/src/main/res/layout-sw600dp/wager_view.xml
+++ b/app/src/main/res/layout-sw600dp/wager_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/BackgroundC"
     android:padding="16dp">
 
     <androidx.cardview.widget.CardView
@@ -15,13 +16,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/BackgroundC">
+
 
         <TextView
             android:id="@+id/wagerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TextView"
+            android:background="@color/BackgroundC"
             android:textSize="36sp" />
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
