--- a/app/src/main/res/layout/activity_wager.xml
+++ b/app/src/main/res/layout/activity_wager.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".Activities.WagerActivity"
+    android:background="@color/BackgroundC"
     android:padding="55dp">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -12,12 +13,13 @@
         android:layout_width="292dp"
         android:layout_height="409dp"
         android:layout_marginTop="100dp"
+        android:background="@color/BackgroundC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.336"
+        app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.202" />
 
     <TextView
         android:id="@+id/WagerActivityTitle"
