--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toBottomOf="@+id/opponentLogo4" />
 
     <TextView
-        android:id="@+id/opponentCountryTV4"
+        android:id="@+id/activtiy_result_opponentLeague_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -153,7 +153,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
-        app:layout_constraintTop_toBottomOf="@+id/opponentCountryTV4" />
+        app:layout_constraintTop_toBottomOf="@+id/activtiy_result_opponentLeague_txt" />
 
     <TextView
         android:id="@+id/activity_match_opponentStadium_txt"
