--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -64,6 +64,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:minLines="2"
+        android:maxLines="2"
         android:layout_marginTop="8dp"
         android:maxWidth="180dp"
         android:text="@string/myClubDummy"
@@ -90,6 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minLines="2"
+        android:maxLines="2"
         android:textAlignment="center"
         android:layout_marginTop="8dp"
         android:maxWidth="180dp"
@@ -120,6 +122,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:minLines="2"
+        android:maxLines="2"
         android:layout_marginTop="8dp"
         android:maxWidth="180dp"
         android:text="@string/opponentClubDummy"
@@ -162,6 +165,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:minLines="2"
+        android:maxLines="2"
         android:layout_marginTop="8dp"
         android:maxWidth="180dp"
         android:text="@string/opponentLeagueDummy"
